Update html and css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="body">
       <div class="hero">
         <h2 class="heading">My Landing Page</h2>
-        <p>
+        <p class="hero-text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
           quod, dignissimos eius aut fugit error magnam dolore voluptatum
           adipisci possimus voluptatem vel obcaecati nihil similique excepturi,
@@ -38,15 +38,25 @@
       <div class="container">
         <div class="card">
           <img class="c-image" src="img/20220927_183507.jpg" />
+          <p class="image">
+            A photograph taken from atop the Castillo de Gibralfaro.
+          </p>
         </div>
         <div class="card">
           <img class="c-image" src="img/20220927_175237.jpg" />
+          <p class="image">
+            A photograph taken from atop the Castillo de Gibralfaro.
+          </p>
         </div>
         <div class="card">
           <img class="c-image" src="img/20220926_180907.jpg" />
+          <p class="image">Graffiti outside of the dog park.</p>
         </div>
         <div class="card">
           <img class="c-image" src="img/20220927_183524.jpg" />
+          <p class="image">
+            A photograph taken from atop the Castillo de Gibralfaro.
+          </p>
         </div>
       </div>
     </div>
@@ -57,15 +67,15 @@
           This is an inspiring quote. This could even be a testimonial from a
           customer - who knows so long as it looks nice that's all that matters.
         </div>
-        <div class="person">- Dizzle</div>
+        <div class="author">- Dizzle</div>
       </div>
     </div>
 
     <div class="c-t-a-card">
       <div class="c-t-a">
         <div class="c-t-a-left">
-          <h2>Call to action! It's time!</h2>
-          <p>
+          <h2 class="c-t-a-head">Call to action! It's time!</h2>
+          <p class="c-t-a-text">
             Sign up for our product by clicking that button right over there!
           </p>
         </div>
